--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -6,11 +6,11 @@
         <div class="swiper-slide">
             <p class="bigTitle">花旗产业链平台正式上线</p>
             <p class="smallTitle">高速快捷的产业分析体验，节省大量时间</p>
-            <img width="100%" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1535902349080&di=8c4ab92b3da6ed932aac8f91179cf75d&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01cc1259e80ae3a801202b0c1fd83b.jpg%403000w_1l_2o_100sh.jpg"></div>
+            <img width="100%" src="view/home/background/timg (13).jpeg"></div>
         <div class="swiper-slide">
             <p class="bigTitle">点击查看宏观、微观两大功能</p>
             <p class="smallTitle">方便的构图工具，以及易懂的产业链分析</p>
-            <img width="100%" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1536496295&di=01c063b2d3fc4c8729cf615e5da22814&imgtype=jpg&er=1&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01557c5541eab000000115416f6b1a.jpg%401280w_1l_2o_100sh.jpg"></div>
+            <img width="100%" src="view/home/background/timg (14).jpeg"></div>
     </div>
     <!-- 分页器 -->
     <div class="swiper-pagination"></div>
