--- a/app/view/microIndustryChain/industryFactorAnalyze/industryFactorAnalyze.css
+++ b/app/view/microIndustryChain/industryFactorAnalyze/industryFactorAnalyze.css
@@ -1,19 +1,114 @@
+.container{
+    width: 50%;
+    margin: auto;
+    padding-bottom: 10%;
+}
 .part{
     position: relative;
 }
 .part .index_container{
     display: inline-block;
+
 }
 .part .index_container .list_container{
-    overflow: auto;
-    max-height: 280px;
+    /*overflow: auto;*/
+    /*max-height: 280px;*/
 }
+.part .index_container .list_container li{
+    list-style: none;
+}
+
 .part .index_container .section{
-    max-height: 300px;
+
+    /*max-height: 300px;*/
 }
 .part .description_container{
     display: inline-block;
     height: 400px;
     position: absolute;
     top: 0;
+    margin-left: 20%;
+
+}
+
+a{
+    cursor: pointer;
+}
+
+button{
+    width: 400px;
+    position: relative;
+    cursor: pointer;
+    font: bold 12px/normal 'Segoe UI', Arial, sans-serif;
+    color: #FFFFFF;
+    font-family: 微软雅黑;
+    text-decoration: none;
+    border: 1px solid rgba(0,0,0,.1);
+    padding: 5px 10px 6px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    background-color: #2981E4;
+    background-image: -moz-linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0.2));
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255,255,255,0.2)), color-stop(100%, rgba(0,0,0,0.2)));
+    background-image: -webkit-linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0.2));
+    background-image: -o-linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0.2));
+    background-image: linear-gradient(rgba(255,255,255,0.2), rgba(0,0,0,0.2));
+    -webkit-box-shadow: inset 0px 1px rgba(255,255,255,0.6), 0px 0px 3px 0px rgba(0,0,0,.2);
+    -moz-box-shadow: inset 0px 1px rgba(255,255,255,0.6), 0px 0px 3px 0px rgba(0,0,0,.2);
+    box-shadow: inset 0px 1px rgba(255,255,255,0.6), 0px 0px 4px 0px rgba(0,0,0,.2);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+}
+
+button::-moz-focus-inner {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+
+/* ===[ Default hover ]=== */
+
+button:hover, .button:active {
+    text-decoration: none;
+    background-color: #F9F9F9;
+}
+
+/* ===[ Default active ]=== */
+
+button:active {
+    top: 1px;
+    margin-bottom: 1px;
+    border-bottom-width: 1px;
+    background-color: #F9F9F9;
+    background-image: -moz-linear-gradient(rgba(0,0,0,0.2), rgba(255,255,255,0.2));
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0.2)), color-stop(100%, rgba(255,255,255,0.2)));
+    background-image: -webkit-linear-gradient(rgba(0,0,0,0.2), rgba(255,255,255,0.2));
+    background-image: -o-linear-gradient(rgba(0,0,0,0.2), rgba(255,255,255,0.2));
+    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(255,255,255,0.2));
+}
+
+table{
+
+}
+table th{
+    font-weight: 900;
+    border: 2px solid #E4E5E6;
+}
+table tr td{
+    text-align: center;
+    border: 2px solid #E4E5E6;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+
+table tr:nth-child(odd){background:#F4F4F4;}
+::-webkit-scrollbar-thumb, ::-webkit-scrollbar-thumb:horizontal {
+    border-radius: 6px;
+    background: #2981E4;
+}
+::-webkit-scrollbar-track-piece {
+    background: #2981E4;
 }
