--- a/app/view/macroIndustryDisplay/companyDetails/companyDetails.css
+++ b/app/view/macroIndustryDisplay/companyDetails/companyDetails.css
@@ -1,8 +1,17 @@
+.container{
+    width: 70%;
+    margin: auto;
+    padding: 30px 0 50px 0;
+}
+h2, h3{
+    color: rgba(200,200,200, 0.8);
+}
 table{
     width: 100%;
     min-width: 720px;
     border: solid thin lightblue;
-    color: rgba(140,140,140, 0.8);
+    /*color: rgba(140,140,140, 0.8);*/
+    color: rgba(200,200,200, 0.8);
 }
 table tr{
     width: 100%;
@@ -12,6 +21,8 @@ table tr td{
     border: solid thin lightblue;
 }
 .td_name{
+    font-weight: bold;
+    color: rgba(240,240,240, 0.8);
     width: 15%;
     min-width: 150px;
     /*background-color: #00ccff;*/
