--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.html
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.html
@@ -5,6 +5,7 @@
 <!--顶部导航栏-->
 <header class="header_macro">
     <div class="module_nav">
+        <a class="nav" ui-sref="home">首页</a>
         <a class="nav" ui-sref="macroIndustryDisplay.generalInfo">基本情况</a>
         <div style="display:flex">
             <a class="nav" ui-sref="macroIndustryDisplay.industryData({target: ''})" ng-mouseover="showDataPane()"  ng-mouseleave="hideDataPane()">行业指标</a>
