修改行业因子分析的位置

--- a/app/view/industryFactorAnalyze/industryFactorAnalyze.html
+++ b/app/view/industryFactorAnalyze/industryFactorAnalyze.html
@@ -1,3 +1,5 @@
+<david-nav></david-nav>
+
 <div class="container">
     <div id="index" class="part" style="margin-top: 10%">
         <h1>Step1.选择指标</h1>
@@ -76,4 +78,4 @@
 
     <label style="margin-top: 10%;font-size: 36px" >分析结果：</label><span style="font-size: 26px" ng-show="toShowResult">您所选择的指标和行业股票的收益率之间有相关性，且相关性较稳定。</span>
 </div>
-<link rel="stylesheet" href="view/microIndustryChain/industryFactorAnalyze/industryFactorAnalyze.css"/>
+<link rel="stylesheet" href="view/industryFactorAnalyze/industryFactorAnalyze.css"/>
