修改行业因子入口

--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -40,7 +40,7 @@
             <h5 style="color: white">产业链微观建模、牛人分析</h5>
         </div>
         <div class="tendency_hover" style="display: flex;flex-flow: column;  align-items: center; justify-content: center; width: 33%; height: 60%;">
-            <div class="fast-go-btn go-to-tendency"></div>
+            <div ui-sref="industryFactorAnalyze" class="fast-go-btn go-to-tendency"></div>
             <h3 style="color: white">舆情分析</h3>
             <h5 style="color: white">专业的数据分析框架</h5>
         </div>
