--- a/app/view/macroIndustryDisplay/industryData/industryData.html
+++ b/app/view/macroIndustryDisplay/industryData/industryData.html
@@ -4,7 +4,7 @@
 <div class="navBar">
     <hr class="vertical_line">
     <li class="active">
-        <img class="icon_active" src="view/resource/汽车icon.png" style="display: initial"/><a class="nav_item active" href="#capacity">行业产能</a>
+        <img class="icon_active" src="view/resource/2行业指标/行业产能1.png" style="display: initial"/><a class="nav_item active" href="#capacity">行业产能</a>
         <ul style="display: inherit;">
             <li><a class="nav2_item active" href="#div_cyc">乘用车</a></li>
             <li><a class="nav2_item" href="#div_syc">商用车</a></li>
@@ -13,7 +13,7 @@
         </ul>
     </li>
     <li>
-        <img class="icon_active" src="view/resource/汽车icon.png"/><a class="nav_item" href="#inventory">行业库存</a>
+        <img class="icon_active" src="view/resource/2行业指标/行业库存1.png"/><a class="nav_item" href="#inventory">行业库存</a>
         <ul>
             <li><a class="nav2_item" href="#div_ccpch">产成品存货</a></li>
             <li><a class="nav2_item" href="#div_kcxs">库存系数</a></li>
@@ -21,13 +21,13 @@
         </ul>
     </li>
     <li>
-        <img class="icon_active" src="view/resource/汽车icon.png"/><a class="nav_item" href="#price">价格</a>
+        <img class="icon_active" src="view/resource/2行业指标/价格1.png"/><a class="nav_item" href="#price">价格</a>
         <ul>
             <li><a class="nav2_item" href="#div_GAIN">GAIN</a></li>
         </ul>
     </li>
     <li>
-        <img class="icon_active" src="view/resource/汽车icon.png"/><a class="nav_item" href="#holdNum">汽车保有量</a>
+        <img class="icon_active" src="view/resource/2行业指标/汽车保有量1.png"/><a class="nav_item" href="#holdNum">汽车保有量</a>
         <ul>
             <li><a class="nav2_item" href="#div_qcbyl">汽车保有量</a></li>
             <li><a class="nav2_item" href="#div_qczc">汽车注册</a></li>
@@ -35,7 +35,7 @@
         </ul>
     </li>
     <li>
-        <img class="icon_active" src="view/resource/汽车icon.png"/><a class="nav_item" href="#sellNum">整车销量</a>
+        <img class="icon_active" src="view/resource/2行业指标/整车销量1.png"/><a class="nav_item" href="#sellNum">整车销量</a>
         <ul>
             <li><a class="nav2_item" href="#div_zgqcxl">中国汽车销量</a></li>
             <li><a class="nav2_item" href="#div_cycxl">乘用车销量</a></li>
