--- a/app/view/industryFactorAnalyze/industryFactorAnalyze.html
+++ b/app/view/industryFactorAnalyze/industryFactorAnalyze.html
@@ -76,6 +76,6 @@
         <button class="btn_sureToAnalyze" ng-click="clickSureToAnalyze()">确认</button>
     </div>
 
-    <label style="margin-top: 10%;font-size: 36px" >分析结果：</label><span style="font-size: 26px" ng-show="toShowResult">您所选择的指标和行业股票的收益率之间有相关性，且相关性较稳定。</span>
+    <label style="margin-top: 10%;font-size: 36px" >分析结果：</label><span id="resultSpan" style="font-size: 26px" ng-show="toShowResult"></span>
 </div>
 <link rel="stylesheet" href="view/industryFactorAnalyze/industryFactorAnalyze.css"/>
