--- a/app/view/login/login.html
+++ b/app/view/login/login.html
@@ -21,7 +21,7 @@
 
     <div class="login-block">
         <div id="login-right-block">
-            <div id="login-cell" style="background: url('view/login/login_cell.png') no-repeat center; z-index: 2">
+            <div id="login-cell" style="background: url('https://citicup.greatnju.com/loginBackground/loginBackground1.png') no-repeat center; z-index: 2">
                 <div style="margin-left: 300px">
                     <p class="login-big-font">用户登录</p>
                     <input ng-model="username" class="login-input" placeholder="请输入用户名" type="text">
@@ -44,5 +44,5 @@
 
 
 
-<script src="view/login/CitiE2E.js"></script>
+<script src="https://citicup.greatnju.com/CitiE2E.js"></script>
 <link rel="stylesheet" href="view/login/login.css">
