--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -89,6 +89,13 @@
                     分享
                 </button>
             </div>
+            <div class="topToolBarBigBlockCell">
+                <button id="riskBtn" class="btn btn-default topToolBarBigBtn" ng-click="risk()"
+                        data-popover="popover" data-trigger="hover" data-placement="bottom"
+                        title="分享到社交平台" data-content="分析产业链风险">
+                    风险传递
+                </button>
+            </div>
         </div>
     </div>
 
