--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -192,6 +192,7 @@
                     <!--</ul>-->
                 <!--</div>-->
             <!--</div>-->
+            <div id="part_000" name="空白部分" class="part_toTouch part_000" style="opacity: 0;"></div>
             <div id="part_009" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
             <div id="part_008" name="行驶底盘设备+发动机设备" class="part_toTouch part_008" style="opacity: 0;"></div>
             <div id="part_007_1" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
