--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
@@ -214,6 +214,23 @@
     left: 1143px;
     top: 515px;
 }
+.briefAndList_container.part_005{
+    position: absolute;
+    /*left: 930px;*/
+    left: 1143px;
+    top: 76px;
+}
+.briefAndList_container.part_006_1{
+    position: absolute;
+    /*left: 930px;*/
+    left: 1142px;
+    top: 120px;
+}
+.briefAndList_container.part_006_2{
+    position: absolute;
+    left: 1142px;
+    top: 555px;
+}
 .briefAndList_container.part_007_1{
     position: absolute;
     /*left: 930px;*/
@@ -256,129 +273,164 @@
 /*单独每个的定位*/
 #part_001{
     position: absolute;
-    top:110px;
-    left:618px;
-    width: 130px;
-    height: 110px;
+    top:100px;
+    left:548px;
+    width: 116px;
+    height: 94px;
 }
 #part_002{
     position: absolute;
-    top:30px;
-    left: 630px;
-    width: 180px;
-    height: 180px;
+    top:28px;
+    left: 560px;
+    width: 160px;
+    height: 155px;
 }
 #part_003{
     position: absolute;
-    top: 6px;
-    left: 560px;
-    width: 296px;
-    height: 220px;
+    top: 8px;
+    left: 490px;
+    width: 272px;
+    height: 216px;
 }
 #part_004_1{
     position: absolute;
-    top: 480px;
-    left: 305px;
-    width: 100px;
-    height: 80px;
+    top: 430px;
+    left: 273px;
+    width: 86px;
+    height: 68px;
 }
 #part_004_2{
     position: absolute;
-    top: 540px;
-    left: 413px;
-    width: 103px;
-    height: 80px;
+    top: 482px;
+    left: 367px;
+    width: 96px;
+    height: 70px;
 }
 #part_004_3{
     position: absolute;
-    top: 205px;
-    left: 820px;
-    width: 60px;
-    height: 50px;
+    top: 183px;
+    left: 728px;
+    width: 54px;
+    height: 38px;
 }
 #part_004_4{
     position: absolute;
-    top: 268px;
-    left: 940px;
-    width: 60px;
-    height: 50px;
+    top: 238px;
+    left: 840px;
+    width: 40px;
+    height: 46px;
 }
 #part_005{
     position: absolute;
-    top: 308px;
-    left: 580px;
-    width: 163px;
-    height: 126px;
+    top: 272px;
+    left: 516px;
+    width: 144px;
+    height: 114px;
 }
 #part_006_1{
     position: absolute;
-    top: 380px;
-    left: 259px;
-    width: 245px;
-    height: 180px;
+    top: 338px;
+    left: 229px;
+    width: 220px;
+    height: 170px;
 }
 #part_006_2{
     position: absolute;
-    top: 295px;
-    left: 504px;
-    width: 183px;
-    height: 284px;
+    top: 235px;
+    left: 449px;
+    width: 150px;
+    height: 286px;
 }
 #part_006_3{
     position: absolute;
-    top: 225px;
-    left: 687px;
-    width: 223px;
-    height: 328px;
+    top: 204px;
+    left: 599px;
+    width: 210px;
+    height: 286px;
 }
 #part_006_4{
     position: absolute;
-    top: 85px;
-    left: 830px;
+    top: 76px;
+    left: 736px;
     width: 220px;
-    height: 310px;
+    height: 284px;
 }
 #part_007_1{
     position: absolute;
-    top: 316px;
-    left: 323px;
-    width: 137px;
-    height: 117px;
+    top: 282px;
+    left: 281px;
+    width: 128px;
+    height: 100px;
 }
 #part_007_2{
     position: absolute;
-    top: 187px;
-    left: 523px;
-    width: 143px;
-    height: 117px;
+    top: 165px;
+    left: 463px;
+    width: 130px;
+    height: 108px;
 }
 #part_007_3{
     position: absolute;
-    top: 397px;
-    left: 908px;
-    width: 150px;
-    height: 125px;
+    top: 355px;
+    left: 806px;
+    width: 136px;
+    height: 110px;
 }
 #part_007_4{
     position: absolute;
-    top: 530px;
-    left: 704px;
-    width: 140px;
-    height: 105px;
+    top: 470px;
+    left: 626px;
+    width: 126px;
+    height: 100px;
 }
-#part_008{
+#part_008_1{
     position: absolute;
     top: 510px;
-    left: 482px;
-    width: 420px;
-    height: 245px;
+    left: 422px;
+    width: 180px;
+    height: 170px;
 }
-#part_009{
+#part_008_2{
     position: absolute;
-    top: 523px;
-    left: 442px;
-    width: 522px;
-    height: 334px;
+    top: 450px;
+    left: 602px;
+    width: 210px;
+    height: 170px;
+}
+#part_009_1{
+    position: absolute;
+    top: 560px;
+    left: 392px;
+    width: 208px;
+    height: 203px;
+}
+#part_009_2{
+    position: absolute;
+    top: 470px;
+    left: 600px;
+    width: 80px;
+    height: 244px;
+}
+#part_009_3{
+    position: absolute;
+    top: 470px;
+    left: 680px;
+    width: 40px;
+    height: 211px;
+}
+#part_009_4{
+    position: absolute;
+    top: 470px;
+    left: 720px;
+    width: 50px;
+    height: 182px;
+}
+#part_009_5{
+    position: absolute;
+    top: 490px;
+    left: 770px;
+    width: 86px;
+    height: 123px;
 }
 #part_000{
     /*cursor: inherit;*/
@@ -387,6 +439,62 @@
     left: 0px;
     height: 925px;
     width: 1750px;
+}
+#part_icon01{
+    position: absolute;
+    top: 714px;
+    left: 630px;
+    height: 66px;
+    width: 50px;
+}
+#part_icon02{
+    position: absolute;
+    top: 690px;
+    left: 676px;
+    height: 60px;
+    width: 46px;
+}
+#part_icon03{
+    position: absolute;
+    top: 658px;
+    left: 724px;
+    height: 72px;
+    width: 44px;
+}
+#part_icon04{
+    position: absolute;
+    top: 636px;
+    left: 768px;
+    height: 62px;
+    width: 47px;
+}
+#part_icon05{
+    position: absolute;
+    top: 709px;
+    left: 776px;
+    height: 62px;
+    width: 40px;
+}
+#part_icon06{
+    position: absolute;
+    top: 678px;
+    left: 816px;
+    height: 72px;
+    width: 48px;
+}
+#part_icon07{
+    position: absolute;
+    top: 656px;
+    left: 860px;
+    height: 56px;
+    width: 48px;
+}
+#part_icon08{
+    position: absolute;
+    top: 624px;
+    left: 908px;
+    height: 68px;
+    width: 46px;
 }
 
 .part .other{
