--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -40,11 +40,19 @@
             <img class="wholeView cover part_003" src="view/resource/003.png"/>
             <img class="wholeView cover part_002" src="view/resource/002.png"/>
             <img class="wholeView cover part_001" src="view/resource/001.png"/>
+            <img class="wholeView cover part_icon01" src="view/resource/icon01.png"/>
+            <img class="wholeView cover part_icon02" src="view/resource/icon02.png"/>
+            <img class="wholeView cover part_icon03" src="view/resource/icon03.png"/>
+            <img class="wholeView cover part_icon04" src="view/resource/icon04.png"/>
+            <img class="wholeView cover part_icon05" src="view/resource/icon05.png"/>
+            <img class="wholeView cover part_icon06" src="view/resource/icon06.png"/>
+            <img class="wholeView cover part_icon07" src="view/resource/icon07.png"/>
+            <img class="wholeView cover part_icon08" src="view/resource/icon08.png"/>
             <div class="line_container part_009"><img class="wholeView cover part_009" src="view/resource/009-展开.png" style="opacity: 1;"/></div>
             <div class="line_container part_008"><img class="wholeView cover part_008" src="view/resource/008-展开.png" style="opacity: 1;"/></div>
             <div class="line_container part_007"><img class="wholeView cover part_007" src="view/resource/007-展开.png" style="opacity: 1;"/></div>
-            <!--<div class="line_container part_006"><img class="wholeView cover part_006" src="view/resource/006-展开.png" style="opacity: 1;"/></div>-->
-            <!--<div class="line_container part_005"><img class="wholeView cover part_005" src="view/resource/005-展开.png" style="opacity: 1;"/></div>-->
+            <div class="line_container part_006"><img class="wholeView cover part_006" src="view/resource/006-展开.png" style="opacity: 1;"/></div>
+            <div class="line_container part_005"><img class="wholeView cover part_005" src="view/resource/005-展开.png" style="opacity: 1;"/></div>
             <div class="line_container part_004"><img class="wholeView cover part_004" src="view/resource/004-展开.png" style="opacity: 1;"/></div>
             <div class="line_container part_003"><img class="wholeView cover part_003" src="view/resource/003-展开.png" style="opacity: 1;"/></div>
             <div class="line_container part_002"><img class="wholeView cover part_002" src="view/resource/002-展开.png" style="opacity: 1;"/></div>
@@ -127,6 +135,39 @@
                     </tr>
                 </table>
             </div>
+            <div class="briefAndList_container part_005">
+                <div><label class="brief">
+                    行业采用玻璃为主要原料加工生产所需的生活用品、工业用品。广义分为普通平板玻璃和特种玻璃。汽车行业中，主要采用夹层钢化玻璃和夹层区域钢化玻璃，安全系数较高，抵御冲击力。汽车玻璃行业内包括AGC集团、福耀集团、圣戈班集团等。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_006 part_006_1">
+                <div><label class="brief">
+                    车身及外观设备行业是指根据汽车工程设计原理，结合人们追求外观美学的需求，对汽车进行造型设计、车身工程开发、底盘工程开发、动力系统工程开发、整车集成开发、电子电器工程开发，并按照产品设计和工艺要求制造相应设备的行业。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[0]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="briefAndList_container part_006 part_006_2">
+                <div><label class="brief">
+                    金属制品行业包括结构性金属制品制造、金属工具制造、集装箱及金属包装容器制造、不锈钢及类似日用金属制品制造等。以中国有色金属工业总公司、德国莱茵金属公司、中信金属公司等为代表。随着社会的进步和科技的发展，金属制品在工业、农业以及人们的生活各个领域的运用越来越广泛。
+                </label></div>
+                <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
+                <table class="companyTable">
+                    <tr ng-repeat="row in list_toShow[1]">
+                        <td ng-repeat="item in row track by $index"><a ng-click="goToCompanyDetails(item)">{{item.name}}</a></td>
+                    </tr>
+                </table>
+            </div>
             <div class="briefAndList_container part_007 part_007_1">
                 <div><label class="brief">
                     轮胎行业涉及轮胎的生产、销售、售后、美容等增值服务。利用橡胶制品制造各种车辆或机械上装配的接地滚动的圆环形轮胎。轮胎耗用了世界橡胶量的一半。中国轮胎工业发展迅速已成为世界第一轮胎生产大国。领先企业包括中策橡胶集团有限公司、佳通轮胎（中国）投资有限公司、山东恒丰橡胶有限公司等。
@@ -193,8 +234,13 @@
                 <!--</div>-->
             <!--</div>-->
             <div id="part_000" name="空白部分" class="part_toTouch part_000" style="opacity: 0;"></div>
-            <div id="part_009" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
-            <div id="part_008" name="行驶底盘设备+发动机设备" class="part_toTouch part_008" style="opacity: 0;"></div>
+            <div id="part_009_1" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
+            <div id="part_009_2" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
+            <div id="part_009_3" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
+            <div id="part_009_4" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
+            <div id="part_009_5" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
+            <div id="part_008_1" name="行驶底盘设备+发动机设备" class="part_toTouch part_008" style="opacity: 0;"></div>
+            <div id="part_008_2" name="行驶底盘设备+发动机设备" class="part_toTouch part_008" style="opacity: 0;"></div>
             <div id="part_007_1" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
             <div id="part_007_2" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
             <div id="part_007_3" name="轮胎+橡胶" class="part_toTouch part_007" style="opacity: 0;"></div>
@@ -211,6 +257,14 @@
             <div id="part_003" name="车身及外观设备+合成材料" class="part_toTouch part_003" style="opacity: 0;"></div>
             <div id="part_002" name="纺织品" class="part_toTouch part_002" style="opacity: 0;"></div>
             <div id="part_001" name="转向设备+电气仪器仪表" class="part_toTouch part_001" style="opacity: 0;"></div>
+            <div id="part_icon01" name="" class="part_toTouch part_icon01" style="opacity: 0;"></div>
+            <div id="part_icon02" name="" class="part_toTouch part_icon02" style="opacity: 0;"></div>
+            <div id="part_icon03" name="" class="part_toTouch part_icon03" style="opacity: 0;"></div>
+            <div id="part_icon04" name="" class="part_toTouch part_icon04" style="opacity: 0;"></div>
+            <div id="part_icon05" name="" class="part_toTouch part_icon05" style="opacity: 0;"></div>
+            <div id="part_icon06" name="" class="part_toTouch part_icon06" style="opacity: 0;"></div>
+            <div id="part_icon07" name="" class="part_toTouch part_icon07" style="opacity: 0;"></div>
+            <div id="part_icon08" name="" class="part_toTouch part_icon08" style="opacity: 0;"></div>
         </div>
         <!--<div id="luntai" class="nameAndList">-->
             <!--<label class="name_part">轮胎</label>-->
