--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -57,6 +57,10 @@
             <div class="line_container part_003"><img class="wholeView cover part_003" src="view/resource/003-展开.png" style="opacity: 1;"/></div>
             <div class="line_container part_002"><img class="wholeView cover part_002" src="view/resource/002-展开.png" style="opacity: 1;"/></div>
             <div class="line_container part_001"><img class="wholeView cover part_001" src="view/resource/001-展开.png" style="opacity: 1;"/></div>
+
+            <!--用于点击空白部分弹回-->
+            <div id="part_000" name="空白部分" class="part_toTouch part_000" style="opacity: 0;"></div>
+
             <!--展开列表内容-->
             <div class="briefAndList_container part_001 part_001_1">
                 <div><label class="brief">
@@ -71,7 +75,7 @@
             </div>
             <div class="briefAndList_container part_001 part_001_2">
                 <div><label class="brief">
-                    汽车电气仪表包括了所有电气设备的显示仪表盘，它们显示了汽车的工作状况，是人和汽车的交互界面，常规的仪表有车速表、转速表、机油压力表、水温表、充电表、燃油表等。包括产品设计、技术开发、生产制造等。行业领先企业包括上海德科、江苏新通达电子科技股份有限公司、成都天兴仪表股份有限公司等。’
+                    汽车电气仪表包括了所有电气设备的显示仪表盘，它们显示了汽车的工作状况，是人和汽车的交互界面，常规的仪表有车速表、转速表、机油压力表、水温表、充电表、燃油表等。包括产品设计、技术开发、生产制造等。行业领先企业包括上海德科、江苏新通达电子科技股份有限公司、成都天兴仪表股份有限公司等。
                 </label></div>
                 <div><img class="img_xgqy" src="view/resource/相关企业.png"/></div>
                 <table class="companyTable">
@@ -233,7 +237,6 @@
                     <!--</ul>-->
                 <!--</div>-->
             <!--</div>-->
-            <div id="part_000" name="空白部分" class="part_toTouch part_000" style="opacity: 0;"></div>
             <div id="part_009_1" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
             <div id="part_009_2" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
             <div id="part_009_3" name="金属" class="part_toTouch part_009" style="opacity: 0;"></div>
