行业地位美化

--- a/app/view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.html
+++ b/app/view/macroIndustryDisplay/industryStatus/hylsbj/hylsbj.html
@@ -1,14 +1,33 @@
+<!--跟随导航栏-->
+<div class="navBar">
+    <hr class="vertical_line">
+    <li>
+        <img class="icon_active" src="view/resource/4行业地位/行业上市地位1.png"><a class="nav_item" ui-sref="macroIndustryDisplay.hyssdw">行业上市地位</a>
 
-<div style="margin-left: 22%;width: 50%;margin-top: 3%">
-    <div style="display: inline-block;padding: 5px 0px 0px 15px;background-color: #E5F0FF;height: 40px;width: 100%;">
-        <label>市场</label>
+    </li>
+
+
+    <li  class="active">
+        <img class="icon_active" src="view/resource/4行业地位/行业历史比较以及市场表现对比1.png" style="display: initial"/><a class="nav_item active" ui-sref="macroIndustryDisplay.hylsbj">行业历史比较</a>
+
+    </li>
+    <li>
+        <img class="icon_active" src="view/resource/4行业地位/行业历史比较以及市场表现对比1.png"/><a class="nav_item" ui-sref="macroIndustryDisplay.scbxdb">市场表现对比</a>
+
+    </li>
+</div>
+
+<img src="view/resource/4行业地位/线条.png" style="margin-left: 5%">
+<div style="margin-left: 28%;width: 50%;margin-top: -88.4%">
+    <div style="display: inline-block;padding: 5px 0px 0px 15px;height: 40px;width: 100%;">
+        <label style="color: #d6d6d6;font-size: 16px">市场</label>
         <select  ng-model="market" ng-change="changeMarket()">
             <option value="全部">全部</option>
             <option value="沪深A股">沪深A股</option>
             <option value="新三板做市">新三板做市</option>
         </select>
 
-        <label style="margin-left: 20px">行业指标</label>
+        <label style="margin-left: 35px;color: #d6d6d6;font-size: 16px">行业指标</label>
         <select ng-model="index" ng-change="changeIndex()">
             <option value="市盈率">市盈率</option>
             <option value="市净率">市净率</option>
@@ -21,25 +40,25 @@
 
         </select>
 
-        <label style="margin-left: 20px">对比行业</label>
+        <label style="margin-left: 35px;color: #d6d6d6;font-size: 16px">对比行业</label>
         <select>
             <option value="全部A股">全部A股</option>
         </select>
 
-        <label style="margin-left: 20px">差异值</label>
+        <label style="margin-left: 35px;color: #d6d6d6;font-size: 16px">差异值</label>
         <select ng-model="difference" ng-change="changeDifference()">
             <option value="无">无</option>
             <option value="绝对差额">绝对差额</option>
             <option value="比值">比值</option>
         </select>
     </div>
-    <div style="width:100%;height: 400px;background-color: white">
-        <div id="test" style="height:400px"></div>
+    <div>
+        <div id="test" style="height:460px;width: 130%;margin-left: -7%"></div>
     </div>
 
 </div>
 
-<div style="margin-left: 22%;width: 50%;background-color: white">
+<div style="margin-left: 27%;width: 55%;margin-top: 0.8%">
     <table id="table">
 
     </table>
