--- a/app/view/macroIndustryDisplay/mainQuotedCompany/cwsj/cwsj.html
+++ b/app/view/macroIndustryDisplay/mainQuotedCompany/cwsj/cwsj.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 </div>
-<div id='div1' style="width: 172%;margin-top: 5%;background-color: white;height: 150px;">
+<div id='div1' style="width:80%;margin-top: 5%;background-color: white;height: 150px;">
     <div id='TITLE' style="display: inline-block;padding: 10px 0px 0px 15px;background-color: #E5F0FF;height: 40px;width: 100%;">
         <label>市场</label>
         <select  ng-model="market" ng-change="changeMarket()">
@@ -98,9 +98,9 @@
 </div>
 
 
-<div id='div2' style="width: 172%;background-color: white;">
+<div id='div2' class='tableDiv' style="">
     <label style="position: absolute;margin-top:-5%;font-size: 20px">汽车-财务数据比较</label>
-    <table id="table" width="100%" >
+    <table id="table"  >
 
 
 
