--- a/app/view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.html
+++ b/app/view/macroIndustryDisplay/industryStatus/scbxdb/scbxdb.html
@@ -1,21 +1,40 @@
+<!--跟随导航栏-->
+<div class="navBar">
+    <hr class="vertical_line">
+    <li>
+        <img class="icon_active" src="view/resource/4行业地位/行业上市地位1.png"><a class="nav_item" ui-sref="macroIndustryDisplay.hyssdw">行业上市地位</a>
 
-<div style="margin-left: 22%;width: 50%;margin-top: 3%">
-    <div style="display: inline-block;padding: 5px 0px 0px 15px;background-color: #E5F0FF;height: 40px;width: 100%;">
-        <label>市场</label>
+    </li>
+
+
+    <li>
+        <img class="icon_active" src="view/resource/4行业地位/行业历史比较以及市场表现对比1.png"><a class="nav_item" ui-sref="macroIndustryDisplay.hylsbj">行业历史比较</a>
+
+    </li>
+    <li  class="active">
+        <img class="icon_active" src="view/resource/4行业地位/行业历史比较以及市场表现对比1.png" style="display: initial"/><a class="nav_item active" ui-sref="macroIndustryDisplay.scbxdb">市场表现对比</a>
+
+    </li>
+</div>
+
+<img src="view/resource/4行业地位/线条.png" style="margin-left: 5%">
+<div style="margin-left: 28%;width: 50%;margin-top: -88.4%">
+    <div style="display: inline-block;padding: 5px 0px 0px 15px;height: 40px;width: 100%;">
+        <label style="color: #d6d6d6;font-size: 16px">市场</label>
         <select  ng-model="market" ng-change="changeMarket()" >
             <option value="全部">全部</option>
             <option value="沪深A股">沪深A股</option>
             <option value="新三板做市">新三板做市</option>
         </select>
 
-        <label style="margin-left: 20px;margin-right: 8px">时间范围</label>
+        <label style="margin-left: 20px;margin-right: 8px;color: #d6d6d6;font-size: 16px">时间范围</label>
         <button id='OWB'class="button2" style="display: inline-block" ng-click="COW()">1W</button>
         <button id='OMB'style="display: inline-block" ng-click="COM()">1M</button>
         <button id='TMB'style="display: inline-block" ng-click="CTM()">3M</button>
         <button id='YTDB' style="display: inline-block" ng-click="CYTD()">YTD</button>
         <button id='OYB' style="display: inline-block" ng-click="COY()">1Y</button>
 
-        <label style="margin-left: 20px">基准</label>
+        <label style="margin-left: 20px;color: #d6d6d6;font-size: 16px">基准</label>
         <select ng-model="standard" ng-change="changeStandard()">
             <option value="沪深300">沪深300</option>
             <option value="三板做市">三板做市</option>
@@ -32,14 +51,14 @@
 
 
     </div>
-    <div style="width:100%;height: 400px;background-color: white">
-        <div id="test" style="height:400px"></div>
+    <div>
+        <div id="test" style="height:460px;width: 125%;margin-left: -5%"></div>
 
     </div>
 
 </div>
 
-<div style="margin-left: 22%;width: 50%;background-color: white;">
+<div style="margin-left: 28%;width: 55%;margin-top: 0.6%">
     <table id="table">
 
     </table>
