--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.html
@@ -5,10 +5,10 @@
 <!--跟随导航栏-->
 <div class="navBar">
     <hr class="vertical_line">
-    <li class="active"><img class="icon_active" src="view/resource/1基本情况/中国汽车企业图谱1.png" style="display: initial"/><a class="nav_item active" href="#wholePic">汽车产业全景图</a></li>
-    <li><img class="icon_active" src="view/resource/1基本情况/汽车产业全景图1.png"/><a class="nav_item" href="#chain_car">汽车产业链图</a></li>
-    <li><img class="icon_active" src="view/resource/1基本情况/汽车产业链图1.png"/><a class="nav_item" href="#flowPath_car">汽车生产流程图</a></li>
-    <li><img class="icon_active" src="view/resource/1基本情况/汽车生产流程图1.png"/><a class="nav_item" href="#atlas_car">中国汽车企业图谱</a></li>
+    <li class="active"><img class="icon_active" src="view/resource/1基本情况/汽车产业全景图1.png" style="display: initial"/><a class="nav_item active" href="#wholePic">汽车产业全景图</a></li>
+    <li><img class="icon_active" src="view/resource/1基本情况/汽车产业链图1.png"/><a class="nav_item" href="#chain_car">汽车产业链图</a></li>
+    <li><img class="icon_active" src="view/resource/1基本情况/汽车生产流程图1.png"/><a class="nav_item" href="#flowPath_car">汽车生产流程图</a></li>
+    <li><img class="icon_active" src="view/resource/1基本情况/中国汽车企业图谱1.png"/><a class="nav_item" href="#atlas_car">中国汽车企业图谱</a></li>
 </div>
 
 <!--<a ng-click="test_ajax()">TEST</a>-->
@@ -282,12 +282,14 @@
 
 <div id="chain_car" class="part">
     <!--<h3><a href="#chain_car">汽车产业链图</a></h3>-->
+    <div class="blank"></div>
     <img class="other" src="view/resource/汽车产业链图.png"/>
     <!--<img src="view/macroIndustryDisplay/generalInfo/pic/汽车产业链图.png"/>-->
 </div>
 
 <div id="flowPath_car" class="part">
     <!--<h3><a href="#flowPath_car">汽车生产流程图</a></h3>-->
+    <div class="blank"></div>
     <img class="other" src="view/resource/汽车生产流程图.png"/>
     <!--<img src="view/macroIndustryDisplay/generalInfo/pic/汽车生产流程图.png"/>-->
 </div>
